--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Contenedor principal del juego -->
     <div class="container">
         <!-- Título del juego -->
-        <h1>🎮 Juego de Memoria</h1>
+        <h1>Juego de Parejas ADSO</h1>
         
         <!-- Panel de estadísticas -->
         <div class="stats">
